# quant-macro-workshop

./: .gitignore  README.md  pyproject.toml  requirement.txt  requirements.txt  test.ipynb
src/ch2/: grid_search.ipynb  grid_search.py  parametric_assumption.ipynb  parametric_assumption.py  projection_method.ipynb  projection_method.py  projection_method_3period.ipynb  projection_method_3period.py
src/ch3/: PFI_stochastic.ipynb  TI_EGM.ipynb  TI_EGM_Carroll_2006.ipynb
src/ch4/: TI_EGM.ipynb  TI_EGM_Carroll_2006.ipynb  TI_EGM_stochastic.ipynb  TI_EGM_stochastic_Carroll_2006.ipynb  backword.ipynb
src/ch4/TI_EGM/: delta-is-1.ipynb  delta-is-not-1_good-or-bad-state.ipynb  delta-is-not-1_stochastic.ipynb
src/ch5/: hoge.ipynb  speedy_borrowing_constraints_TI.py  stationary_distribution_general.ipynb
src/ch5/aiyagari/: Aiyagari試作.ipynb  equilibrium.py  hoge.py  main.py  policy_function.py  setting.py  stationary_dist.py  stationary_dist.test.py  stationary_dist_numba.py  usage_sd.ipynb
src/codon/: fib.py  grid_search.py  parametric_assumption.py
src/refactor/: TI_EGM_stochastic.py  projection_method_3period.py
src/refactor/TI_EGM/: TI_EGM_stochastic.py  main.py
