[tool.poetry]
name = "quant-macro-workshop"
version = "0.1.0"
description = ""
authors = ["tomoyahiroe <tomoya4creative@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
numpy = "2.0"
numba = "^0.60.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
