[tool.poetry]
name = "quant-macro-workshop"
version = "0.1.0"
description = ""
authors = ["tomoyahiroe <tomoya4creative@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
numpy = "2.0"
numba = "^0.60.0"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
